--- a/QL Final Project.ipynb
+++ b/QL Final Project.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -129,6 +129,35 @@
    "metadata": {},
    "source": [
     "# Question 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 2.366235294117647\n",
+      "Variance: 0.3471050941241765\n"
+     ]
+    }
+   ],
+   "source": [
+    "w1, w0 = slope_intercept_LR(x, y)\n",
+    "y_pred = [(w1*i) + w0 for i in x]\n",
+    "\n",
+    "def mean(x, y):\n",
+    "    return (sum(y_pred) / len(y_pred))\n",
+    "\n",
+    "def variance(x, y):\n",
+    "    return np.mean((y_pred - mean(x,y))**2)\n",
+    "\n",
+    "    \n",
+    "print(f'Mean: {mean(x, y)}')\n",
+    "print(f'Variance: {variance(x, y)}')"
    ]
   },
   {
